refactor: simplify code across backend and frontend (no behavior changes)