@@ -3,8 +3,8 @@ package com.incubyte.cardealership.vehicle.service;
 import com.incubyte.cardealership.vehicle.dto.*;
 import com.incubyte.cardealership.vehicle.entity.Vehicle;
 import com.incubyte.cardealership.vehicle.entity.VehicleStatus;
-import com.incubyte.cardealership.vehicle.exception.VehicleNotFoundException;
 import com.incubyte.cardealership.vehicle.exception.OutOfStockException;
+import com.incubyte.cardealership.vehicle.exception.VehicleNotFoundException;
 import com.incubyte.cardealership.vehicle.repository.VehicleRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.jpa.domain.Specification;
@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,25 +32,21 @@ public class VehicleService {
                 .quantity(request.quantity())
                 .build();
 
-        Vehicle saved = vehicleRepository.save(vehicle);
-        return mapToResponse(saved);
+        return mapToResponse(vehicleRepository.save(vehicle));
     }
 
     public VehicleResponse getVehicleById(Long id) {
-        Vehicle vehicle = vehicleRepository.findById(id)
-                .orElseThrow(() -> new VehicleNotFoundException("Vehicle with id " + id + " not found"));
-        return mapToResponse(vehicle);
+        return mapToResponse(findOrThrow(id));
     }
 
     public List<VehicleResponse> getAllVehicles() {
         return vehicleRepository.findAll().stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public VehicleResponse updateVehicle(Long id, VehicleRequest request) {
-        Vehicle vehicle = vehicleRepository.findById(id)
-                .orElseThrow(() -> new VehicleNotFoundException("Vehicle with id " + id + " not found"));
+        Vehicle vehicle = findOrThrow(id);
 
         vehicle.setMake(request.make());
         vehicle.setModel(request.model());
@@ -63,42 +58,30 @@ public class VehicleService {
         vehicle.setCategory(request.category());
         vehicle.setQuantity(request.quantity());
 
-        Vehicle updated = vehicleRepository.save(vehicle);
-        return mapToResponse(updated);
+        return mapToResponse(vehicleRepository.save(vehicle));
     }
 
     public void deleteVehicle(Long id) {
-        Vehicle vehicle = vehicleRepository.findById(id)
-                .orElseThrow(() -> new VehicleNotFoundException("Vehicle with id " + id + " not found"));
-        vehicleRepository.delete(vehicle);
+        vehicleRepository.delete(findOrThrow(id));
     }
 
-    public List<VehicleResponse> searchVehicles(String make, String model, String category, BigDecimal minPrice, BigDecimal maxPrice) {
-        Specification<Vehicle> spec = Specification.where((root, query, cb) -> cb.conjunction());
-        if (make != null && !make.trim().isEmpty()) {
-            spec = spec.and((root, query, cb) -> cb.like(cb.lower(root.get("make")), "%" + make.toLowerCase() + "%"));
-        }
-        if (model != null && !model.trim().isEmpty()) {
-            spec = spec.and((root, query, cb) -> cb.like(cb.lower(root.get("model")), "%" + model.toLowerCase() + "%"));
-        }
-        if (category != null && !category.trim().isEmpty()) {
-            spec = spec.and((root, query, cb) -> cb.like(cb.lower(root.get("category")), "%" + category.toLowerCase() + "%"));
-        }
-        if (minPrice != null) {
-            spec = spec.and((root, query, cb) -> cb.ge(root.get("price"), minPrice));
-        }
-        if (maxPrice != null) {
-            spec = spec.and((root, query, cb) -> cb.le(root.get("price"), maxPrice));
-        }
+    public List<VehicleResponse> searchVehicles(String make, String model, String category,
+                                                BigDecimal minPrice, BigDecimal maxPrice) {
+        Specification<Vehicle> spec = (root, query, cb) -> cb.conjunction();
+
+        if (make != null && !make.isBlank())     spec = spec.and(likeFilter("make", make));
+        if (model != null && !model.isBlank())   spec = spec.and(likeFilter("model", model));
+        if (category != null && !category.isBlank()) spec = spec.and(likeFilter("category", category));
+        if (minPrice != null) spec = spec.and((root, q, cb) -> cb.ge(root.get("price"), minPrice));
+        if (maxPrice != null) spec = spec.and((root, q, cb) -> cb.le(root.get("price"), maxPrice));
 
         return vehicleRepository.findAll(spec).stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public VehicleResponse purchaseVehicle(Long id) {
-        Vehicle vehicle = vehicleRepository.findById(id)
-                .orElseThrow(() -> new VehicleNotFoundException("Vehicle with id " + id + " not found"));
+        Vehicle vehicle = findOrThrow(id);
 
         if (vehicle.getQuantity() <= 0) {
             throw new OutOfStockException("Vehicle with id " + id + " is out of stock");
@@ -109,21 +92,30 @@ public class VehicleService {
             vehicle.setStatus(VehicleStatus.SOLD);
         }
 
-        Vehicle saved = vehicleRepository.save(vehicle);
-        return mapToResponse(saved);
+        return mapToResponse(vehicleRepository.save(vehicle));
     }
 
     public VehicleResponse restockVehicle(Long id, Integer quantity) {
-        Vehicle vehicle = vehicleRepository.findById(id)
-                .orElseThrow(() -> new VehicleNotFoundException("Vehicle with id " + id + " not found"));
+        Vehicle vehicle = findOrThrow(id);
 
         vehicle.setQuantity(vehicle.getQuantity() + quantity);
         if (vehicle.getQuantity() > 0 && vehicle.getStatus() == VehicleStatus.SOLD) {
             vehicle.setStatus(VehicleStatus.AVAILABLE);
         }
 
-        Vehicle saved = vehicleRepository.save(vehicle);
-        return mapToResponse(saved);
+        return mapToResponse(vehicleRepository.save(vehicle));
+    }
+
+    // ── helpers ──────────────────────────────────────────────────────────────
+
+    private Vehicle findOrThrow(Long id) {
+        return vehicleRepository.findById(id)
+                .orElseThrow(() -> new VehicleNotFoundException("Vehicle with id " + id + " not found"));
+    }
+
+    private Specification<Vehicle> likeFilter(String field, String value) {
+        return (root, query, cb) ->
+                cb.like(cb.lower(root.get(field)), "%" + value.toLowerCase() + "%");
     }
 
     private VehicleResponse mapToResponse(Vehicle vehicle) {
